Changed Ministries Section

--- a/crystal-template/index.html
+++ b/crystal-template/index.html
@@ -96,9 +96,9 @@
         <div class="row">
           <div class="col-md-4 col-sm-6">
             <div class="item-boxes wow fadeInDown" data-wow-delay="0.2s">
-              <img class="rounded-circle" src="img/Pictures/Wilson-Liam.jpg" alt="Wilson and Liam" width="140" height="140">
+              <img class="rounded-circle" style="margin-bottom: 10px;" src="img/Pictures/Wilson-Liam.jpg" alt="Wilson and Liam" width="140" height="140">
               <h4>Wilson & Nina Wang</h4>
-              <p>Pastor of Renew Church OC. He graduated from Talbot in 2008 and proceeded to work as the youth pastor for Ambassador church until 2012. He always had a heart for church planting, and in 2013 began planning for Renew Church. Now he has faithfully served for 3 years as head pastor.</p>
+              <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. </p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6">
@@ -154,7 +154,7 @@
             <div class="content-left text-right wow fadeInLeft animated" data-wow-offset="10">
               <div class="box-item left">
                 <span class="icon">
-                  <i class="lnr lnr-rocket"></i>
+                  <i class="lnr lnr-car"></i>
                 </span>
                 <div class="text">
                   <h4>Come Visit</h4>
@@ -163,7 +163,7 @@
               </div>
               <div class="box-item left">
                 <span class="icon">
-                  <i class="lnr lnr-laptop-phone"></i>
+                  <i class="lnr lnr-arrow-up-circle"></i>
                 </span>
                 <div class="text">
                   <h4>Our Vision</h4>
@@ -172,7 +172,7 @@
               </div>
               <div class="box-item left">
                 <span class="icon">
-                  <i class="lnr lnr-cog"></i>
+                  <i class="lnr lnr-book"></i>
                 </span>
                 <div class="text">
                   <h4>Our History</h4>
@@ -190,7 +190,7 @@
             <div class="content-right text-left wow fadeInRight animated" data-wow-offset="10">
               <div class="box-item right">
                 <span class="icon">
-                  <i class="lnr lnr-camera-video"></i>
+                  <i class="lnr lnr-select"></i>
                 </span>
                 <div class="text">
                   <h4>Connect With Us</h4>
@@ -199,7 +199,7 @@
               </div>
               <div class="box-item right">
                 <span class="icon">
-                  <i class="lnr lnr-magic-wand"></i>
+                  <i class="lnr lnr-laptop"></i>
                 </span>
                 <div class="text">
                   <h4>Our Podcasts</h4>
@@ -208,7 +208,7 @@
               </div>
               <div class="box-item right">
                 <span class="icon">
-                  <i class="lnr lnr-spell-check"></i>
+                  <i class="lnr lnr-users"></i>
                 </span>
                 <div class="text">
                   <h4>Contact Us</h4>
@@ -230,8 +230,8 @@
           <div class="col-md-12 col-sm-12">
               <div class="video-promo-content text-center">
                 <h2 class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Our Introductory Video</h2>
-                <p class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Learn more about us, its only 10mins</p>
-                <a href="https://youtu.be/hHMeIoGEpj4" class="video-popup wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="0.3s"><i class="lnr lnr-film-play"></i></a>
+                <p class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Learn more about us, its only 10 mins</p>
+                <a href="video/'What does Renew Church mean to you-'.mp4" class="video-popup wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="0.3s"><i class="lnr lnr-film-play"></i></a>
               </div>
           </div>
         </div>
@@ -244,14 +244,14 @@
       <!-- Container Starts -->
       <div class="container">
         <div class="section-header">          
-          <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Our <span>Works</span></h2>
+          <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Our <span>Ministries</span></h2>
           <hr class="lines wow zoomIn" data-wow-delay="0.3s">
           <p class="section-subtitle wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy <br> nibh euismod tincidunt ut laoreet dolore magna.</p>
         </div>
         <div class="row">          
           <div class="col-md-12">
             <!-- Portfolio Controller/Buttons -->
-            <div class="controls text-center wow fadeInUp" data-wow-delay=".6s">
+            <!--<div class="controls text-center wow fadeInUp" data-wow-delay=".6s">
               <a class="control mixitup-control-active btn btn-common" data-filter="all">
                 All 
               </a>
@@ -264,7 +264,7 @@
               <a class="control btn btn-common" data-filter=".research">
                 Print 
               </a>
-            </div>
+            </div>-->
             <!-- Portfolio Controller/Buttons Ends-->          
 
             <!-- Portfolio Recent Projects -->
@@ -272,30 +272,33 @@
               <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix marketing planning">
                 <div class="portfolio-item">
                   <div class="shot-item">
-                    <a class="overlay lightbox" href="img/portfolio/img1.jpg">
-                      <img src="img/portfolio/img1.jpg" alt="" />  
+                    <a class="overlay lightbox" href="img/portfolio/Basketball2.jpg">
+                      <img src="img/portfolio/Basketball2.jpg" alt="" />  
                       <i class="lnr lnr-plus-circle item-icon"></i>
                     </a>
+                    <p>Basketball</p>
                   </div>               
                 </div>
               </div>
               <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix planning">
                 <div class="portfolio-item">
                   <div class="shot-item">
-                    <a class="overlay lightbox" href="img/portfolio/img2.jpg">
-                      <img src="img/portfolio/img2.jpg" alt="" />  
+                    <a class="overlay lightbox" href="img/portfolio/Coffee.jpg">
+                      <img src="img/portfolio/Coffee.jpg" alt="" />  
                       <i class="lnr lnr-plus-circle item-icon"></i>
                     </a>
+                    <p>Epic</p>
                   </div>               
                 </div>
               </div>
               <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix research">
                 <div class="portfolio-item">
                   <div class="shot-item">
-                    <a class="overlay lightbox" href="img/portfolio/img3.jpg">
-                      <img src="img/portfolio/img3.jpg" alt="" />  
+                    <a class="overlay lightbox" href="img/portfolio/Bible.jpg">
+                      <img src="img/portfolio/Bible.jpg" alt="" />  
                       <i class="lnr lnr-plus-circle item-icon"></i>
                     </a>
+                    <p>Cru</p>
                   </div>               
                 </div>
               </div>
@@ -306,6 +309,7 @@
                       <img src="img/portfolio/img4.jpg" alt="" />  
                       <i class="lnr lnr-plus-circle item-icon"></i>
                     </a>
+                    <p>Apartment Life</p>
                   </div>               
                 </div>
               </div>
@@ -316,6 +320,7 @@
                       <img src="img/portfolio/img5.jpg" alt="" />  
                       <i class="lnr lnr-plus-circle item-icon"></i>
                     </a>
+                    <p>Laundry Love</p>
                   </div>               
                 </div>
               </div>
@@ -326,6 +331,7 @@
                       <img src="img/portfolio/img6.jpg" alt="" />  
                       <i class="lnr lnr-plus-circle item-icon"></i>
                     </a>
+                    <p>Rock Climbing</p>
                   </div>               
                 </div>
               </div>
@@ -338,7 +344,7 @@
     <!-- Portfolio Section Ends --> 
 
     <!-- Start Pricing Table Section -->
-    <div id="pricing" class="section pricing-section">
+    <!--<div id="pricing" class="section pricing-section">
       <div class="container">
         <div class="section-header">          
           <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Pricing <span>Plans</span></h2>
@@ -412,7 +418,7 @@
 
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- End Pricing Table Section -->
 
     <!-- Counter Section Start -->
@@ -518,12 +524,12 @@
     <section id="download" class="section">
       <div class="container">
         <div class="section-header">          
-          <h2 class="section-title wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s"><span>Download</span> Our App</h2>
+          <h2 class="section-title wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s"><span>Check Out</span> Our Podcasts</h2>
         </div>
         <div class="row">
           <div class="col-md-12">            
             <div class="download-area text-center wow fadeInUp" data-wow-delay="0.3s">
-                <a href="#" class="btn btn-border"><i class="fa fa-apple"></i>Download Now</a>
+                <a href="https://itunes.apple.com/us/podcast/renew-church-oc/id1038985827?mt=2" class="btn btn-border"><i class="fa fa-apple"></i>Download Now</a>
             </div>
           </div>
         </div>
