--- a/index.html
+++ b/index.html
@@ -492,27 +492,27 @@
           <div class="col-md-10 wow fadeInRight" data-wow-delay="0.2s">
             <div class="touch-slider owl-carousel owl-theme">
               <div class="testimonial-item">
-                <img src="img/testimonial/customer1.png" alt="Client Testimonoal" />
+                <img src="img/Pictures/BenLi.jpg" alt="Client Testimonoal" />
                 <div class="testimonial-text">
-                  <p>Morbi eget dictum enim. Praesent sed quam sit amet lorem tempor rhoncus. <br>In hac habitasse platea dictumst. Vivamus in accumsan ex</p>
-                  <h3>Johnathan Doe</h3>
-                  <span>Marketing Head Matrix media</span>
+                  <p>We have a really cute worship leader.</p>
+                  <h3>Ben Li</h3>
+                  <span>Head Astronaut @ Zodiac</span>
                 </div>
               </div>
               <div class="testimonial-item">
-                <img src="img/testimonial/customer2.png" alt="Client Testimonoal" />
+                <img src="img/Pictures/JustinKuo.jpg" alt="Client Testimonoal" />
                 <div class="testimonial-text">
-                  <p>Morbi eget dictum enim. Praesent sed quam sit amet lorem tempor rhoncus. <br>In hac habitasse platea dictumst. Vivamus in accumsan ex</p>
-                  <h3>Oidila Matik</h3>
-                  <span>President Lexo Inc</span>
+                  <p>Zion has been keeping the number of ladies in YA pretty high. <br>I raised him well.</p>
+                  <h3>Justin Kuo</h3>
+                  <span>Professional Picturer & Eater @ UCR</span>
                 </div>
               </div>
               <div class="testimonial-item">
-                <img src="img/testimonial/customer3.png" alt="Client Testimonoal" />
+                <img src="img/Pictures/WilsonWang.jpg" alt="Client Testimonoal" />
                 <div class="testimonial-text">
-                  <p>Morbi eget dictum enim. Praesent sed quam sit amet lorem tempor rhoncus. <br>In hac habitasse platea dictumst. Vivamus in accumsan ex</p>
-                  <h3>- Alex Dattilo</h3>
-                  <span>CEO Optima Inc</span>
+                  <p>Renew Rocks. <br>God Rules.</p>
+                  <h3>Wilson Wang</h3>
+                  <span>Professional Amateur Volleyball Player @ Renew OC</span>
                 </div>
               </div>
             </div>
