--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="fixed-top">
           <div class="container">
             <div class="logo-menu">
-              <a href="index.html" class="logo"> <img height="20" style="margin-bottom: 6px;" src="img/Pictures/Renew-Symbol.png"> Renew</a>
+              <a href="index.html" class="logo"> <img height="20" style="margin-bottom: 6px;" src="img/Pictures/Renew-Symbol.png"> Renew OC</a>
               <button class="menu-button" id="open-button"><i class="lnr lnr-menu"></i></button>    
             </div>           
           </div>
@@ -106,7 +106,8 @@
           <hr class="lines wow zoomIn" data-wow-delay="0.3s">
           <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Here are some of the amazing things we offer.</p>
         </div>
-        <div class="row">
+        <div id="map"></div>
+        <!--<div class="row">
           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
             <div class="content-left text-right wow fadeInLeft animated" data-wow-offset="10">
               <div class="box-item left">
@@ -174,7 +175,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>-->
       </div>
     </section>
     <!-- Map Section End -->    
@@ -731,6 +732,24 @@
       </div>
     </div>    
 
+    <script>
+      function initMap() {
+        console.log("init");
+        var uluru = {lat: -25.363, lng: 131.044};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 4,
+          center: uluru
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script>
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwBnlSE1oHDZ-ZZYxvWBA49Ly43GSrpSI&callback=initMap">
+    </script>
+
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="js/jquery-min.js"></script>
     <script src="js/tether.min.js"></script>
@@ -752,6 +771,9 @@
     <script src="js/form-validator.min.js"></script>
     <script src="js/contact-form-script.js"></script>     
     <script src="js/main.js"></script>
+    <script src="js/googleMap.js"></script>
+
+    
     
   </body>
 </html>
