Changed map css to less file

--- a/index.html
+++ b/index.html
@@ -23,13 +23,6 @@
     <link rel="stylesheet" href="css/responsive.css">
 
     <link rel="icon" type="image/gif" href="img/RenewPeople/Renew-Symbol.png" />
-
-    <style>
-       #map {
-        height: 400px;
-        width: 100%;
-       }
-    </style>
   </head>
   <body>
       <div class="menu-wrap">
@@ -325,10 +318,10 @@
     </section>
     <!-- Staff Section End -->
 
-    <!-- Contact Section Start -->
+    <!-- Contact Form Section Start -->
     <section id="contact" class="section">
       <div class="container">
-        <div class="row justify-content-md-center">          
+        <div class="row justify-content-md-center">     
           <div class="col-md-9 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">            
             <div class="contact-block">
               <div class="section-header">          
@@ -427,7 +420,7 @@
     </section>
     <!-- Contact Section End -->
 
-    <!-- Start Video promo Section -->
+    <!-- Start Youtube promo Section -->
     <section class="video-promo section" data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
       <div class="container">
